#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
LP-2009-11-20-0: Bugfix:     Fixed dbwriter/reporting install issue
                 Enhancem.:  Improved error logging
                 Review:     AP

HP-2009-11-20-0: Bugfix:     Fixed issue_1161 test with certain vi versions
                 Issue:      313
                 Review:     CR

CR-2009-11-19-0: Bugfix:     o added missing JAVA_HOME question response to 
                               current_upgrade_test
                             o increased some timeouts
                             o Test now reports CRITICAL errors from upgrade 
                               script
                 Review:     DG

EB-2009-11-18-0: Cleanup:    o review of EB-2009-11-14-0
                             o function in cluster_procedures.tcl failed because
                               current directory (./) is not part of my PATH
                               therefore I added ./ to the command name 
                 Review:     CR

MD-2009-11-18-0: Enhancem.:  o added issue test for IZ 3271
                 Review:     HP

EB-2009-11-14-0: Bugfix:     o fixed parsing function of qstat -F to handle
                               attributes m_tolopolgy ... (J2C) output 
                               corretcly.
                             o changed code fo binary subittion test that 
                               sometimes failed if TS host is different from
                               qmaster host.
                             o added Java JSV tests to jsv_script test.
                               Some tests scenarios have been changed.